--- a/Strategy.page
+++ b/Strategy.page
@@ -24,6 +24,8 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - [Legal definition of blockade]()
 - [William Eaton]() declares a blockade on 23 July 1801 (BW1:528)
 - [Richard Dale]() argues for a close blockade: "Should the United States Determin to carry on the War against Tripoli it will be highly necessary to keep it closly Blockaded, not to suffer any kind of Vessels, of any Nation to go in or come out, to do this it will take Two Frigates and two Sloops of War , two to be of[f] the Harbour and two to cruise along the Coast, to the Eastwd and Westward they will be under the necessity of going Into port for water &c that must be done by turns, also I think it would be advisable to have a small Vessel constructed to carry a Bomb to heave a few shells In the Town now & then" (BW1:553)
+- Important to note that for the first year of the blockade, it was a joint operation with Sweden, who was doing the heavy lifting
+    - [Alexander Murray]() notes the three Swedish frigates off Tripoli at a time when there are no(?) American ships, BW2:163, 1 June 1802
 
 ## Effectiveness
 - Blockades were seasonal. [Weather]() made a big difference in how ships operated.
