--- a/Communications.page
+++ b/Communications.page
@@ -6,6 +6,7 @@
 - Communications were terribly slow even though the space the squadron occupied was not that large
     - BW2:22: [William Bainbridge]() records having just received a letter on 15 January 1802 from [Richard Dale]() written on 15 December 1801
 - Communications amongst the squadron are so bad for the second cruise that [Alexander Murray]() gets all the way to Malaga without knowing that [Thomas Truxtun]() is not the commodore anymore (BW2:140, 30 April 1802)
+- Similarly, Murray does not know that [Richard Valentine Morris]() has arrived in the Mediterranean, so he gives orders to [Andrew Sterett]() and others from Tunis while Morris is sitting in Gibraltar (see BW2:164), 2 June 1802.
 
 ## Communications with Barbary rulers
 - Important to remember that communications often went through at least one, maybe two translators between Barbary ruler and American commodore or diplomat
