payment to Tunis

--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -7,7 +7,7 @@
     - 5 Pairs of golden pistols, etc. (L2100)
     - (List provided by [Rufus King](), 15 March 1802, BW2:86)
 - BW2:134: [William Eaton]() gets in a tiff with the bey of Tunis; the bey told Eaton to pack his bags, whereupon Eaton refused to grant any more passports for Tunisian vessels. The bey averred that he wanted peace, and that he did not think Eaton was as inclined toward peace as he was; "they must have a Consul with less fantasia & more friendly to the Barbary interests." Eaton replied that he was anticipating leaving very soon, and being replaced by [James Leander Cathcart](), but the bey said that Cathcart was not welcome in Tunis, 26 April 1802
-- 
+- BW2:166: [Alexander Murray]() delivers the presents to [William Eaton]() for the bey of Tunis; they are accepted, but one Tunisian minister asks again for a corvette or brig of war; Eaton reminds the minister of the stipulations of their treaty, but also notes that if they pay Tripoli, then they will have to pay Tunis (6 June 1802)
 
 ## Disputes over captured vessels
 
