--- a/Relations between navy and diplomats.page
+++ b/Relations between navy and diplomats.page
@@ -4,3 +4,8 @@ Most of the time, it seems that the naval officers and the Mediterranean diploma
     - Not everyone agrees with Murray's perspective: Purser [Charles Wadsworth]() of the [USS *Boston*]() says that he thinks sending the *Gloria* to Gibraltar was the right idea, 20 May 1802 (BW2:161)
 - BW2:146: [Alexander Murray]() does not have a high opinion of the diplomats; he writes to SecNav: " there are at this time a Squadron of Sweedish Frigates on that Coast [of Tripoli], so that we have but little to fear from any of the Barbary, States, tho our Consuls make a great fuss about nothing"
 - [William Eaton]()'s plan for [Hamet Karamanli]() is not popular amongst the navy; he records that [Samuel Barron](), [William Bainbridge](), and [Alexander Murray]() offer "very severe criticism" of the plan (8 June 1802, BW2:166)
+    - Eaton has some criticism of his own: he notes that almost none of the American ships have been off Tripoli for any length of time
+        - [USS *Philadelphia*]() left Tunis for Tripoli on 23 September and returned 2 October, but she was "the only U State ship of war ... which has appeared at all on this coast since October until the arrival of the *Boston*"
+        - *Philadelphia* spent the winter in Syracuse
+        - [USS *Essex*]() stationed off Gibraltar
+        - "This is a singularly economical mode of carrying on the war; and it is not extraordinary, if Gentlemen *feelingly* attached to it should take offence at a vigilance which should go to put an end to it" (BW2:166-67)
