--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -9,6 +9,8 @@
     - (List provided by [Rufus King](), 15 March 1802, BW2:86)
 - BW2:134: [William Eaton]() gets in a tiff with the bey of Tunis; the bey told Eaton to pack his bags, whereupon Eaton refused to grant any more passports for Tunisian vessels. The bey averred that he wanted peace, and that he did not think Eaton was as inclined toward peace as he was; "they must have a Consul with less fantasia & more friendly to the Barbary interests." Eaton replied that he was anticipating leaving very soon, and being replaced by [James Leander Cathcart](), but the bey said that Cathcart was not welcome in Tunis, 26 April 1802
 - BW2:166: [Alexander Murray]() delivers the presents to [William Eaton]() for the bey of Tunis; they are accepted, but one Tunisian minister asks again for a corvette or brig of war; Eaton reminds the minister of the stipulations of their treaty, but also notes that if they pay Tripoli, then they will have to pay Tunis (6 June 1802)
+- [James Leander Cathcart]() reports that the bey of Tunis wants the USA to join the "list of small Nations" like Sweden or Denmark, and also asked for a better consul, which Cathcart reads as a consul who will bow to all of the bey's wishes (11 June 1802, BW2:171)
+    - Cathcart reflects on the disparity between how much France pays and how much the USA pays; the dishonor of not getting a salute when entering Tunis harbor; the likelihood that Tunis will want war but not while the American squadron is around.
 
 ## Disputes over captured vessels
 
