--- a/Relations with Tunis.page
+++ b/Relations with Tunis.page
@@ -11,6 +11,7 @@
 - BW2:166: [Alexander Murray]() delivers the presents to [William Eaton]() for the bey of Tunis; they are accepted, but one Tunisian minister asks again for a corvette or brig of war; Eaton reminds the minister of the stipulations of their treaty, but also notes that if they pay Tripoli, then they will have to pay Tunis (6 June 1802)
 - [James Leander Cathcart]() reports that the bey of Tunis wants the USA to join the "list of small Nations" like Sweden or Denmark, and also asked for a better consul, which Cathcart reads as a consul who will bow to all of the bey's wishes (11 June 1802, BW2:171)
     - Cathcart reflects on the disparity between how much France pays and how much the USA pays; the dishonor of not getting a salute when entering Tunis harbor; the likelihood that Tunis will want war but not while the American squadron is around.
+    - Cathcart states that the British and French, who maintain consuls in the Barbary states without regard to whether they are welcome, are the model the USA should follow, rather than the model of a 'small christian nation' who changes consuls at the whim of the Barbary ruler; changing at the request of the ruler sets a precedent for dishonor in other areas
 
 ## Disputes over captured vessels
 
