--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -12,3 +12,10 @@
 - 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
 - 1 June 1802: 1 small Tripoline galley out, plus "two Pirates on the Coast of Spain, which hath created great alarm on that Coast"---uncertain whether the two pirates are Tripolitan or not ([Alexander Murray](), BW2:163)
 - 4 June 1802: Two Tripolitan galliots at sea ([William Eaton](), BW2:159)
+
+## Captures
+- 17 June 1802: [Andrew Morris]() and the brig [Franklin]() captured by 3 Tripolitan cruisers off Cape Pallas
+    - Was initially brought into Algiers but [Richard O'Brien]()'s objections caused the Tripolitans to "make a hasty retreat" to Bizerta in Tunis, and after 5 days to Tripoli
+    - [Nicholas Nissen]() intervened to give Morris relative liberty; [Bryan McDonogh]() claimed 3 crew members as British subjects, and 2 more were let go as foreign passengers; therefore only Morris and three other crew members remain in captivity
+    - Morris questions how it was possible that the USA did not intervene; he even states that as he was being brought in to Tripoli, there were an American and a Swedish frigate who could have recaptured the *Franklin*
+    - " I do not wish to attack blame to any man, but this transaction was in open day in Sight of thousands amongst which the Consuls of different nations can testify - I have not the honor of being known by you, but be assured that it is not from a ill heart, nor the thoughts of my Situation deprived of the converse of a wife, family and friends, and what is dear to every American, Liberty, that induces me to State the foregoing facts, It is the exultation of these Barbarians at Such conduct that gives me pain" (BW2:176-77)
