--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -13,6 +13,7 @@ Passports were a sticking point between the USA and all of the Barbary regencies
     - 
 - [Richard O'Brien]() complains to the Secretary of State that the passports issued to American merchants are defective, because their parts don't match the part the Algerian corsairs have; other nations with this problem have had vessels' cargo condemned (25 November 1801, BW1:625)
 - After [Richard Dale]() and then [Richard Valentine Morris]() refuse to grant passports to Morocco to allow wheat ships to Tripoli, [James Simpson]() informs them that he may have to leave Morocco, and also that no ship should go through the Straits unconvoyed (BW2:179, 17 June 1802)
+    - Simpson wonders whether it would be better to just give Morocco their wheat ship passports, rather than causing panic amongst insurance companies that could cause them to raise their rates and engender real commercial problems for ships in the Mediterranean (BW2:182, 17 June 1802)
 
 ## Other nations' relations with the Barbary states
 - BW2:67: [Nicholas Nissen]() expresses surprise at how the Swedish ships have taken hostile action against Tripoli while they are still technically at peace with Tripoli, 21 April 1802
