Sweden and Tripoli

--- a/Encounters between Europe and Barbary.page
+++ b/Encounters between Europe and Barbary.page
@@ -1,2 +1,6 @@
 ### Portugal and Algiers
 - 16 May 1802: An Algerian 44-gun frigate captured a 44-gun Portuguese frigate, killing 72 Portuguese crew; Portuguese frigate captured with little enough damage that it would be incorporated into the Algerian fleet (BW2:155-56)
+
+## Sweden and Tripoli
+- BW2:189: The treaty that Col. Tornquist negotiated with Tripoli has apparently fallen through; Sweden intends to send another squadron against Tripoli once it has settled with Great Britain (2 July 1802)
+- 
