American brig capture

--- a/Captivity.page
+++ b/Captivity.page
@@ -10,6 +10,10 @@
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
     - Captured and brought to Algiers, 8 October 1793
 
+## American brig
+- Tripolitan xebec captured 9 men in an American brig off Cape Pallas on her way from Marseilles to America (BW2:194, 6 July 1802)
+- Brought to Bizerte, where [Guiseppe Manucie]() alerted [William Eaton]() of the capture
+
 # Captivity negotiations
 Unable to negotiate for themselves because of lack of diplomatic standing with Tripoli, the USA had to rely on others to negotiate for captives' freedom and comfort
 
