--- a/Strategy.page
+++ b/Strategy.page
@@ -42,6 +42,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
     - He offers this as an alternate plan: "Two Ships employed in the blockade here to keep up appearances, for it is no more, understand me - I mean a close Blockade without any indulgences, not at 6, & 8 leagues distance and oftentimes out of sight for days; all the rest of our force should be employed in cruising between Susa, Cape Bon, and Sicily; one Summer spent with vigilance in this manner I am certain would convince the Bashaw that America was in earnest procure me my liberty and an honorable peace for my country" (BW2:177)
 - [Alexander Murray]() too sees the blockade as ineffective: "Altho we keep up the Blockade with all our diligence, & am myself seldom out of sight of the Town, the other Ships stationed in a Line along the Coast, yet they do contrive to get their small row Galleys out, in the night, in defiance of us, by rowing close under the land, & taking shelter occasionally in the small Ports, with which this coast abounds, for our parts, we dare not venture too close in, on account of sudden Calms, & no Anchorage till you are nearly on the Beach" (BW2:192-93, 8 July 1802)
     - [Need for different ships]()
+- [James Leander Cathcart]() reports 5 Tripolitan cruisers out, 7 July 1802 (BW2:194)
 
 # [Coup in Tripoli]()
 -  [William Eaton]() first proposes a scheme to get [Yusuf Karamanli]() on board an American vessel to capture him? (BW1:567)
