--- a/Encounters between Europe and Barbary.page
+++ b/Encounters between Europe and Barbary.page
@@ -3,3 +3,6 @@
 
 ## Sweden and Tripoli
 - BW2:189: The treaty that Col. Tornquist negotiated with Tripoli has apparently fallen through; Sweden intends to send another squadron against Tripoli once it has settled with Great Britain (2 July 1802)
+
+## France and Algiers
+- BW2:195: [James McKnight]() reports that the French have landed 20,000 men at Oran near Algiers, with another 30,000 on their way, to attack Algiers (seems unlikely?), 8 July 1802
