--- a/Tripoli.page
+++ b/Tripoli.page
@@ -1,7 +1,7 @@
 Negotiations with Tripoli sometimes occurred through the other Barbary governments. As Algiers was the strongest of the four, it was also the most willing to step in as third party (for a price).
 
-# ASP2FR2: *Barbary powers. Communicated to Congress on the 15th December, 1802.*
-## Algiers
+## ASP2FR2: *Barbary powers. Communicated to Congress on the 15th December, 1802.*
+### Algiers
 -   462: Letter to James Leander Cathcart, 10 May 1802: Tripoli tried to negotiate a treaty with the USA through Algiers
 -   463: Richard O'Brien to Sec of State, 1 Feb 1802
     -   Algerine government wants O'B to settle with Tripoline ambassador but requires some money to facilitate the negotiations?
@@ -14,6 +14,13 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
     - O'B is warned by marine minister to tread lightly around the dey, who was going to crack down on the Spanish, British, and French (to which O'B replied that he didn't care what the dey did with them, he was going to report that Algiers was no friend of America but of Tripoli)
     - The dey came to some agreement about the Franklin, which was disregarded, at which time the dey ordered the corsair and prize to leave Algiers immediately
 
-## Tunis
+### Tunis
 - 462: James Leander Cathcart to Sec of State, 4 July 1802
     - Says that Eaton says that Tripoli is trying to make peace via Tunis: "We prefer peace to war when we can obtain it on honorable terms, but not otherwise."
+ 
+ 
+## Negotiations through [Nicholas Nissen]()
+- BW2:195: Nissen writes to [James Leander Cathcart]() on behalf of Sidi Muhammad Daguize, 8 July 1802
+    - Daguize wants peace
+    - The advisers who wanted war are now in disgrace with the bashaw
+    - Daguize suggests that now would be an advantageous time to negotiate for peace
