--- a/Captivity.page
+++ b/Captivity.page
@@ -7,6 +7,7 @@
     - 2 more captives released as foreigners
     - Tripolitan xebec captured 9 men in an American brig off Cape Pallas on her way from Marseilles to America (BW2:194, 6 July 1802)
     - Brought to Bizerte, where [Guiseppe Manucie]() alerted [William Eaton]() of the capture
+    - [William Eaton]() is not allowed to speak to Morris; he has dire predictions about what might happen to the sailors when they reach Tripoli: "They will be carried to Tripoli, where they also will be cried for sale at public auction, like so many cattle; or, perhaps, stationed on the batteries to slay & be slain by their Countrymen" (BW2:196, 9 July 1802)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
