Courtney supply ship

--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -14,6 +14,15 @@ One of the constant questions for the squadron was whether to get supplies from 
     - One Tierce of Rice
 - SecNav tells [Richard Valentine Morris]() that he should expect a supply ship from America within two months of his departure for the Mediterranean; it will be carrying only "Beef, Pork, Bread, Flour, Pease, and Cordage"; he's expected to get everything else in the Mediterranean (BW2:100, 1 April 1802)
 - [Alexander Murray]() in [USS *Constellation*]() reprovisions [USS *Philadelphia*]() as well as he can with stores brought from America, 2 May 1802 (BW2:146)
+- BW2:197: Brig *Courtney* dispatched to Gibraltar for the squadron, 9 July 1802, carrying:
+    - 300 barrels of beef
+    - 250 barrels of pork
+    - 120,000 lb of bread
+    - 65 barrels of flour
+    - 400 bushels of pease
+    - 18,000 lb of rice
+    - a quantity of medicines
+    - (insurance on this cargo was $15,000)
 
 ## In the Mediterranean
 - BW1:553: [Richard Dale]() discovers that Malta has only water, no stores, so he recommends Syracuse as a place to get supplies
