Everything except a good Government

--- a/Algiers.page
+++ b/Algiers.page
@@ -1,2 +1,26 @@
 - BW1:617-18: [Richard O'Brien]() records that the dey has requested 500 mahogany boards of 1-4 inches, as well as long planks and spikes (7 November 1801)
 - BW1:620-21: [Richard O'Brien]() accepts $30,000 from [Richard Dale]() as payment for the annual stipend to the Dey
+
+## Wealth of Algiers 
+According to Richard O'Brien, this is the state of the regency of Algiers, July 1802
+
+- $65 million in public treasury
+- $15 million belonging to great men, merchants, and Jews
+- 1.5 million inhabitants
+    - 80,000 Mahometans
+    - 10,000 Jews
+    - 14,000 Turks and sons of Turks ("regulars So Called and paid")
+- Could raise 60,000 militia horse and foot
+- 13 corsairs (12-44 guns)
+- 60 gun boats ("only fit for Service in fine weather")
+- 150 coasters, 25-30 tons, 14 men each
+- Western ports (Oran, Arzew, etc.), annually:
+    - 110 sail of vessels with wheat and barley, wool, hides, etc.
+    - 50 sail of small vessels with oxen, sheep, and poultry for Gibraltar and the Spanish islands
+- Eastern ports (Bonaport, Astoria, Tedels, Bugia, etc.), annually:
+    - 60 sail of vessels with wheat, barley, oil, wool and hides
+- Total amount of sailing income: $2,550,000
+- "this whole trade of The 170 Sail of Cargoes is in The power of the Bacris and Busnachs of Algiers they have the Contract. or permit from the dey ministry Beys of Oran and Constantine for the Sum of 600,000 dollars"
+- "the goods brought here from Genoa Livorn triest Marseilles Spain portugal and Gibralter does not exceed in amount. pr Annum--800,000 dollrs but The Cash Sent to Livorn by the Jews and to the Levant. by the turks---Annually amounts to One Million of Dollars"
+- 1200 Christian slaves at $2500 apiece for ransom
+- O'Brien writes, though, "This Regency produces everything except a good Government. Honour and honesty but with those 3 requisites its productions--would be great. and might load 500 Sail of Vessels of 200 tons Each."
