--- a/Algiers.page
+++ b/Algiers.page
@@ -2,7 +2,7 @@
 - BW1:620-21: [Richard O'Brien]() accepts $30,000 from [Richard Dale]() as payment for the annual stipend to the Dey
 
 ## Wealth of Algiers 
-According to Richard O'Brien, this is the state of the regency of Algiers, July 1802
+According to Richard O'Brien, this is the state of the regency of Algiers, July 1802 (B2:198)
 
 - $65 million in public treasury
 - $15 million belonging to great men, merchants, and Jews
