--- a/Algiers.page
+++ b/Algiers.page
@@ -24,3 +24,4 @@ According to Richard O'Brien, this is the state of the regency of Algiers, July 
 - "the goods brought here from Genoa Livorn triest Marseilles Spain portugal and Gibralter does not exceed in amount. pr Annum--800,000 dollrs but The Cash Sent to Livorn by the Jews and to the Levant. by the turks---Annually amounts to One Million of Dollars"
 - 1200 Christian slaves at $2500 apiece for ransom
 - O'Brien writes, though, "This Regency produces everything except a good Government. Honour and honesty but with those 3 requisites its productions--would be great. and might load 500 Sail of Vessels of 200 tons Each."
+- Small jab at corruption? "The nett of Cleare revenue of this regency does not exceed 500 Thsd dollars at the most and as to the treasury there is something of. a leake in it these 4 1/2 years"
