Not buying peace

--- a/Tripoli.page
+++ b/Tripoli.page
@@ -24,3 +24,4 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
     - Daguize wants peace
     - The advisers who wanted war are now in disgrace with the bashaw
     - Daguize suggests that now would be an advantageous time to negotiate for peace
+- BW2:202-3: [Alexander Murray]() agrees to grant free passage to the negotiators from Tripoli? But he reminds Nissen that the USA will not buy peace, since it is against the principles of their government, but once the bashaw understands that, they ought to be able to resolve the negotiations with relative ease (13 July 1802)
