--- a/Weather.page
+++ b/Weather.page
@@ -12,3 +12,7 @@ Weather was a significant factor in whether or not American naval vessels were o
 
 - BW2:139: [USS *Constellation*]() delayed---took 12 days to go 2/3 of the way to Gibraltar, and then 4 weeks to go the remaining 1/3; the wind was so heavy at Gibraltar that [Alexander Murray]() believed the ship to be in danger if it moored there, so went to Malaga instead, 30 April 1802
     - BW2:139: Murray writes to [William Kirkpatrick]() that his inability to stop in at Gibraltar means he has had no contact with the squadron (see [Communications]())
+
+- BW2:203: [USS *Essex*]() records a storm that carried away "Main top mast, main & fore top gallt yards & split Main top gallt mast. Jno Bradley & Jno Weyant
+seamen went overboard with the rigging & were lost." (See also [Physical a  
+- 
