masts carried away in a storm

--- a/Physical accidents to ships or persons.page
+++ b/Physical accidents to ships or persons.page
@@ -13,4 +13,4 @@ Accidents to ships or people were no small matter when the squadron was deployed
 
 ### To persons
 - A strange little episode: 2 midshipmen from the [USS *Essex*]() went on shore, where it seems that they dueled with each other, and Mr. Higginbotham killed Mr. Swartwout. Uncertain whether this occurred in Gibraltar or Algeciras. Higginbotham was arrested, and permission to bury Swartwout in Gibraltar was denied. (BW2:96, 27 March 1802) Swartwout was ultimately buried in Algeciras, Fort St. Iago, 28 March 1802 (BW2:97).
-- BW2:203: USS Essex, 14 July 1802, records a storm that carried away “Main top mast, main & fore top gallt yards & split Main top gallt mast. Jno Bradley & Jno Weyant seamen went overboard with the rigging & were lost.” (See also [Weather]().)
+- BW2:203: [USS *Essex*](), 14 July 1802, records a storm that carried away “Main top mast, main & fore top gallt yards & split Main top gallt mast. Jno Bradley & Jno Weyant seamen went overboard with the rigging & were lost.” (See also [Weather]().)
