--- a/Tripoli.page
+++ b/Tripoli.page
@@ -1,9 +1,10 @@
+## Through other nations
+
 Negotiations with Tripoli sometimes occurred through the other Barbary governments. As Algiers was the strongest of the four, it was also the most willing to step in as third party (for a price).
 
-## ASP2FR2: *Barbary powers. Communicated to Congress on the 15th December, 1802.*
 ### Algiers
--   462: Letter to James Leander Cathcart, 10 May 1802: Tripoli tried to negotiate a treaty with the USA through Algiers
--   463: Richard O'Brien to Sec of State, 1 Feb 1802
+-   462: Letter to [James Leander Cathcart](), 10 May 1802: Tripoli tried to negotiate a treaty with the USA through Algiers (ASP2FR2: *Barbary powers. Communicated to Congress on the 15th December, 1802.*)
+-   463: [Richard O'Brien]() to Sec of State, 1 Feb 1802
     -   Algerine government wants O'B to settle with Tripoline ambassador but requires some money to facilitate the negotiations?
     -   O'B declines to give them money outright, citing bad faith by Tripolitans in previous dealings
 -   Richard O'Brien to Sec of State, 26 June 1802
@@ -25,3 +26,7 @@ Negotiations with Tripoli sometimes occurred through the other Barbary governmen
     - The advisers who wanted war are now in disgrace with the bashaw
     - Daguize suggests that now would be an advantageous time to negotiate for peace
 - BW2:202-3: [Alexander Murray]() agrees to grant free passage to the negotiators from Tripoli? But he reminds Nissen that the USA will not buy peace, since it is against the principles of their government, but once the bashaw understands that, they ought to be able to resolve the negotiations with relative ease (13 July 1802)
+- 
+
+## Problems with negotiations
+- BW2:204: [James Leander Cathcart]() sees the capture of the [*Franklin*]() as a huge setback in the prospect of negotiations: "we were upon the eve of concluding a treaty upon terms which would not only have been honorable to the United States as a Nation, but would have establish'd a precedent worthy the imitation of other nations, & have founded n basis on which to establish our peace with the rest of the Barbary States in future, to be thus lull'd into a false security which has in a great measure blasted our most sanguine hopes is distressing beyond parallel, to have our vessels captured while the squadrons of the U, S of America & of Sweden are lending their aid to protect our commerce implies something very unfavorable to our energy & undoubtedly will be construed much to our disadvantage by the heads of the Barbary States" (15 July 1802)
