--- a/Captivity.page
+++ b/Captivity.page
@@ -9,6 +9,7 @@
     - Brought to Bizerte, where [Guiseppe Manucie]() alerted [William Eaton]() of the capture
     - [William Eaton]() is not allowed to speak to Morris; he has dire predictions about what might happen to the sailors when they reach Tripoli: "They will be carried to Tripoli, where they also will be cried for sale at public auction, like so many cattle; or, perhaps, stationed on the batteries to slay & be slain by their Countrymen" (BW2:196, 9 July 1802)
     - Eaton recalls that there might be a possibility of prisoner exchange in Tripoli based on some Turkish prisoners the USA released in summer 1801, 11 July 1802 (BW2:201)
+    - [James Leander Cathcart]() also wants to redeem the crew, but notes that the brig itself and the cargo were lost--to try to regain those would set a "pernicious precedent" (BW2:204)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
