--- a/Convoy.page
+++ b/Convoy.page
@@ -14,6 +14,17 @@ One of the important but boring duties of the American squadron was to convoy Am
 
 - BW2:189-90: [James Leander Cathcart]() wants to know whether consuls have the authority to force commercial vessels to accept convoy (in response to Morocco's declaration of war), or whether they can only advise commercial vessels to wait for convoy, 2 July 1802
 
+- BW2:205: [James Leander Cathcart]() again laments US merchants' unwillingness to wait: "Mr Appleton & myself endeavor'd to dissuade the
+Masters of vessels now in port from sailing until some of our Frigates
+or those of Sweden arrives to take them under convoy, but without
+effect, they seem at present as they ever have seem'd, intent upon gain only, without properly appreciating the risque, they have ever
+been duly forewarn'd of their danger when any existed, if afterwards
+they chose to precipitate themselves & crews to destruction regardless of their liberty & the national consequences of their capture, I hope
+they will do the Agents of the United States the Justice at least to
+own that we have been indefatigable in giving them timely information
+in order to prevent them from rushing inconsiderately upon ruin &
+what is worse, Slavery", 15 July 1802
+
 ## Irritations and delays
 ### Lack of ships to perform duty
 - BW1:593: [Richard Dale]() to [William Kirkpatrick](): "it is my wish and Intention to give protection to all American Vessels, Either bound up the Mediterranean or down, as much, as in my Power lays, but the Commanders must have patience, I have to observe to you there is only three Ships of War in those seas at present belonging to the United States, one of them must be kept in or about this place, one off and about Tripoli so you see there is only one to go on the convoy Business."
