--- a/Captivity.page
+++ b/Captivity.page
@@ -10,6 +10,7 @@
     - [William Eaton]() is not allowed to speak to Morris; he has dire predictions about what might happen to the sailors when they reach Tripoli: "They will be carried to Tripoli, where they also will be cried for sale at public auction, like so many cattle; or, perhaps, stationed on the batteries to slay & be slain by their Countrymen" (BW2:196, 9 July 1802)
     - Eaton recalls that there might be a possibility of prisoner exchange in Tripoli based on some Turkish prisoners the USA released in summer 1801, 11 July 1802 (BW2:201)
     - [James Leander Cathcart]() also wants to redeem the crew, but notes that the brig itself and the cargo were lost--to try to regain those would set a "pernicious precedent" (BW2:204)
+    - [Alexander Murray]() notes the arrival of the two Tripolitan galleys that took the *Franklin* at Tripoli, but does not record that he in any way tried to give chase or attack said ships (BW2:207, 21 July 1802)
 
 ## Samuel Calder
 - BW1:54: Samuel Calder to House of Dominick Terry and Co., 3 November 1793
