--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -6,6 +6,9 @@
 ## Skirmishes
 ### 16 May 1802
 - [USS *Boston*]() drove a vessel on shore near Tripoli; in conjunction with the Swedish fleet, fired on gun boats sent out to assist the stranded vessel; the Swedes were also cannonading the fort of Tripoli but the *Boston* was not involved in that (BW2:154)
+
+### 22 July 1802
+- [USS *Constellation*]() and the [*Thetis*]() encounter 9 gunboats, which they fired at for about half an hour (11:00-11:30), with no damage to the Americans or Swedish, but [Alexander Murray]() reports that the squadron inflicted damage on both ships and men (BW2:209) 
  
 
 ## Reports of cruisers
@@ -13,7 +16,7 @@
 - 1 June 1802: 1 small Tripoline galley out, plus "two Pirates on the Coast of Spain, which hath created great alarm on that Coast"---uncertain whether the two pirates are Tripolitan or not ([Alexander Murray](), BW2:163)
 - 4 June 1802: Two Tripolitan galliots at sea ([William Eaton](), BW2:159)
 
-## Captures
+## Captures (see [Captivity]())
 - 17 June 1802: [Andrew Morris]() and the brig [Franklin]() captured by 3 Tripolitan cruisers off Cape Pallas
     - Was initially brought into Algiers but [Richard O'Brien]()'s objections caused the Tripolitans to "make a hasty retreat" to Bizerta in Tunis, and after 5 days to Tripoli
     - [Nicholas Nissen]() intervened to give Morris relative liberty; [Bryan McDonogh]() claimed 3 crew members as British subjects, and 2 more were let go as foreign passengers; therefore only Morris and three other crew members remain in captivity
