--- a/Conduct of naval ships.page
+++ b/Conduct of naval ships.page
@@ -36,3 +36,4 @@ These guidelines aren't quite "rules," but they're strong recommendations about 
     - Learns later that it was 3 privates who plundered the xebec, not any officers
     - Eaton is also relieved to learn that the Tunisians have much more to complain about how the Swedes have captured their vessels, which takes the pressure off the Americans (BW2:158, 21 May 1802)
     - The plundering that took place turns out to have been a watch and some money from a Turk; [Charles Wadsworth]() hopes that if the three "lads" get the death penalty, they will be executed in Tunis Bay so that the bey of Tunis can see that the American officers did not approve or or authorize the plundering (BW2:161, 29 May 1802)
+- BW2:210: [William Bainbridge]() hears of a mutiny on board the [USS *Essex*](), seemingly because they do not want to return to the USA? He gave his crew the choice between doing as they were ordered to do, or being put in irons. 18 men chose irons. 25 July 1802
