relations with Algiers

--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -30,3 +30,4 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 
 ## [Relations with Tunis]()
 
+## [Relations with Algiers]()
