--- a/Engagements with Tripoli.page
+++ b/Engagements with Tripoli.page
@@ -15,6 +15,7 @@
 - 17 May 1802: [Alexander Murray]() notes that there were no Tripolitan cruisers out as of 31 April (BW2:155)
 - 1 June 1802: 1 small Tripoline galley out, plus "two Pirates on the Coast of Spain, which hath created great alarm on that Coast"---uncertain whether the two pirates are Tripolitan or not ([Alexander Murray](), BW2:163)
 - 4 June 1802: Two Tripolitan galliots at sea ([William Eaton](), BW2:159)
+- [James Leander Cathcart]() reports 5 Tripolitan cruisers out, 7 July 1802 (BW2:194)
 
 ## Captures (see [Captivity]())
 - 17 June 1802: [Andrew Morris]() and the brig [Franklin]() captured by 3 Tripolitan cruisers off Cape Pallas
