communication with Nissen

--- a/Communications.page
+++ b/Communications.page
@@ -1,6 +1,7 @@
 ## Communications with Washington
 
 ## Communications with diplomats
+- 27 July 1802: [Nicholas Nissen]() observes that it is "very seldom that I have any opportunity to correspond with the Commanders of the Situation of the affairs here," perhaps partly because the commanders don't see a need to, but also because the commanders aren't near Tripoli to be communicated with (BW2:213)
 
 ## Communications amongst the squadron
 - Communications were terribly slow even though the space the squadron occupied was not that large
