--- a/Strategy.page
+++ b/Strategy.page
@@ -27,22 +27,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - Important to note that for the first year of the blockade, it was a joint operation with Sweden, who was doing the heavy lifting
     - [Alexander Murray]() notes the three Swedish frigates off Tripoli at a time when there are no(?) American ships, BW2:163, 1 June 1802
 
-## Effectiveness
-- Blockades were seasonal. [Weather]() made a big difference in how ships operated.
-- [William Eaton]() writes, 24 July 1801, that Tripolitan government is concerned by the blockade because they don't have much food and get most of their food stores from Tunis (BW1:529)
-    - Tunis also concerned because they don't want the blockade of Tripoli to harm them
-- Eaton warns Dale that the Tripolitan admiral and his crews are trying to run the blockade by going home from Gibraltar in a Greek ship they have chartered for the purpose (BW1:566)
-- Dale tells Eaton that it's vital that the Tunisians think there is still a ship off Tripoli, even though there is not in fact a ship there (BW1:571)
-- Intelligence between ports on how the Tripolitans are trying to thwart the blockade is surprisingly good (see [James Leander Cathcart]()'s circular about the ambassador to Morocco's attempts to smuggle wheat into Tripoli, 11 September 1801, BW1:573-74)
-- [Richard O'Brien](), worried that the Tripolitan crews blockaded in Gibraltar would figure out that there was no one actually blockading them in, and would get out via Oran to become "an Enemy in the rear" of the two frigates nearer Tripoli, leaked a false story that 4 more frigates were expected off Gibraltar any day and would be patrolling off Tripoli. He says that the strategy worked, and that the crews left Oran without a vessel. (BW1:616, 8 November 1801)
-- [Richard Dale]() writes to [Thomas Appleton]() to warn imperial, Greek, and Ragusan ships that they have been notified that Tripoli is under blockade and ships continuing to trade with Tripoli will be subject to capture, as fits within the [Law of Nations]() (BW1:625, 24 November 1801)
-- [William Eaton]() feels quite sanguine about how the blockade is going: " I confirm that Muley Soliman has agreed to allow Wheat, to be sent from his Court to Tripoly, but I should think it will be next to an impossibiiy for them to find Vessels to Charter for that Voyage, whilst that Port is so notoriously known to be blockaded" (BW2:91, 19 March 1802)
-- [Andrew Morris](), captured captain of the brig *Franklin*, disagrees with the assessment that the blockade is effective: " It was the assurances I had from all quarters of the impossibility of their Cruizer to evade the vigilance o 9 the Blockade that led me to sea without convoy or Arms - fatal experience has convinced me to the contrary, for their small Vessels can go out any night in the week that they please and penetrate as far to the westward as Malaga, which .is manifest on a late occasion except a different plan is adopted by our fleet" (22 July 1802, BW2:177)
-    - Morris outlines how the Tripolitan cruisers are able to get out
-    - He offers this as an alternate plan: "Two Ships employed in the blockade here to keep up appearances, for it is no more, understand me - I mean a close Blockade without any indulgences, not at 6, & 8 leagues distance and oftentimes out of sight for days; all the rest of our force should be employed in cruising between Susa, Cape Bon, and Sicily; one Summer spent with vigilance in this manner I am certain would convince the Bashaw that America was in earnest procure me my liberty and an honorable peace for my country" (BW2:177)
-- [Alexander Murray]() too sees the blockade as ineffective: "Altho we keep up the Blockade with all our diligence, & am myself seldom out of sight of the Town, the other Ships stationed in a Line along the Coast, yet they do contrive to get their small row Galleys out, in the night, in defiance of us, by rowing close under the land, & taking shelter occasionally in the small Ports, with which this coast abounds, for our parts, we dare not venture too close in, on account of sudden Calms, & no Anchorage till you are nearly on the Beach" (BW2:192-93, 8 July 1802)
-    - [Need for different ships]()
-- BW2:212: [Nicholas Nissen]() points out to [William Eaton]() that he has not seen a frigate off Tripoli for 5 days (27 July 1802)
+### [Blockade effectiveness]()
 
 # [Coup in Tripoli]()
 -  [William Eaton]() first proposes a scheme to get [Yusuf Karamanli]() on board an American vessel to capture him? (BW1:567)
