good grain harvest

--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -14,3 +14,4 @@
     - [Need for different ships]()
 - BW2:212: [Nicholas Nissen]() points out to [William Eaton]() that he has not seen a frigate off Tripoli for 5 days (27 July 1802)
     - He further notes: "In a few days will depart from here 3 or 4 Gallies, & certainly the blockade of this port will neither prevent them from going out, or returning with prizes" (BW2:213) 
+    - He notes yet further that the grain harvest has been good in 1802, and therefore the blockade is less effective than the previous year when Tripoli was in famine (BW2:213)
