--- a/Characteristics of Barbary ships.page
+++ b/Characteristics of Barbary ships.page
@@ -7,6 +7,7 @@
 
 
 # Manpower
+- BW1:602: Report that some Tripoline corsairs have taken English papers and Minorcan crews in order to avoid search and seizure by the American squadron, 24 October 1801
 - Often manned by European dissidents and expatriates
     - "I Suspect many Vagabonds will enter that Service [cruising against American ships] for want of employment in the Privateering line" (BW1:633)
 - In Richard O'Brien's list, he notes the captains of the Algerine vessels: only 3 Algerine; the rest Levantine (BW2:71)
