relations with merchants

--- a/Front Page.page
+++ b/Front Page.page
@@ -32,6 +32,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Naval officers’ relations with their own diplomats]()
 - [Relationships among North Africa]()
 - [Relations with government at home]()
+- [Relations with merchants and civilians]()
 - [Relations with other Barbary states]()
 - [Role of religion]()
 - [Stores]()
