--- a/Negotiation strategies.page
+++ b/Negotiation strategies.page
@@ -31,6 +31,7 @@ awe inspired by a display of our force before his eyes and his capital."
     - If a treaty is made, a consul must be re-established, but as the bashaw is the one who removed the consulate in the first place, he must not expect any gifts to mark the arrival of a new consul---in the meantime, continue to rely on [Nicholas Nissen]() as a substitute
 - BW2:130: SecNav to [Richard Valentine Morris](): "Holding out the olive Branch in one hand & displaying in the other the means of offensive operations, may produce a peaceful disposition towards us in the mind of the Bashaw, and essentially contribute to our obtaining an advantageous treaty with him" (20 April 1802).
 - BW2:163: [Alexander Murray]() writes that "it is not amiss to shew those Folks [Tunisians] our Ships, now, & then, they are powerful advocates in our favor" (1 June 1802)
+- BW2:218: [Alexander Murray]() admits that he is not certain whether a skirmish in which the Americans demonstrated superior fire power over the Tripolitan fleet would actually accomplish anything in terms of treaty negotiations (30 July 1802)
 
 # Use of payment
 ## Price of settlement
