--- a/Blockade effectiveness.page
+++ b/Blockade effectiveness.page
@@ -16,3 +16,4 @@
     - He further notes: "In a few days will depart from here 3 or 4 Gallies, & certainly the blockade of this port will neither prevent them from going out, or returning with prizes" (BW2:213) 
     - He notes yet further that the grain harvest has been good in 1802, and therefore the blockade is less effective than the previous year when Tripoli was in famine (BW2:213)
 - BW2:214: [Andrew Morris]() notes that two ships engaged in a close blockade would likely be effective around Cape Bon--he emphasizes "close," in contrast to the way the blockade has been run to this point (28 July 1802)
+- BW2:218: [Alexander Murray]() observes to the SecNav that he is left alone on the Tripoli station, as even the Swedish frigates have gone off for provisions and won't return until the middle of August; he himself must leave to re-provision in 10 days; he says that none of the otehr ships have stayed on station more than a day or two except the [USS *Boston*]() (30 July 1802)
