patience for slow communications

--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -13,3 +13,4 @@
 - BW2:207: SecState reports that the emperor of Morocco has removed his request for passports to Tripoli, but that the president of the US has also granted passports for Moroccan vessels to travel to Tunis, 22 July 1802
     - Cultivating peace with Morocco seen as an incentive for Tripoli to make peace
 - BW2:210: [James Simpson]() goes to Tangier to negotiate peace with Morocco; he also notes that the Moroccan frigate that has been being built is ready for launch and has been authorized to attack Americans (27 July 1802)
+- BW2:220: [James Simpson]() writes to the emperor of Morocco pleading patience, as the channels of communication between the United States and the Mediterranean are terribly slow (31 July 1802)
