Danish men of war

--- a/Society.page
+++ b/Society.page
@@ -10,3 +10,10 @@ Given that the Americans instinctively felt themselves to be a lesser power, but
 A frequent refrain of disputes between the United States and other nations, specifically Britain, was the nationality of the sailors on board U.S. navy vessels.
 
 - BW1:606: A deserter from the [USS President](), Charles Davis, claimed to be a British subject during his escape attempt in Gibraltar; the officer of the guard in Gibraltar reported this claim, whereupon the civil Chief Judge demanded Davis be handed over, as well as the American officer (Trippe) who had wounded him, to be tried in civil court. [Richard Dale]() declined to produce the man, stating that Davis had shipped with the President in good faith as an American and that he would have to think about whether to hand them both over for civil proceedings. There was some dispute about Davis's wounds (possibly their severity?), over which "A little altercation took place between us [Dale and the judge]." Dale did not hand Davis over, and though the surgeons ruled his injuries minor, Davis died 20 days later on October 20, 1801.
+
+
+# Communications channels
+
+Conversations between ships of different nations could result in information exchange that wasn't happening between ships of the squadron.
+
+- BW2:221: [Alexander Murray]() and [USS *Constellation*]() encounter 3 Danish naval vessels bound for Tripoli with tribute: from those Danes, Murray learns about Morocco's declaration of war against the USA and Sweden (1 August 1802)
