--- a/Front Page.page
+++ b/Front Page.page
@@ -50,3 +50,5 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Abbreviations]()
 
 ## [Random stuff]()
+
+## [Credits]()
