--- a/Relations with Morocco.page
+++ b/Relations with Morocco.page
@@ -14,3 +14,4 @@
     - Cultivating peace with Morocco seen as an incentive for Tripoli to make peace
 - BW2:210: [James Simpson]() goes to Tangier to negotiate peace with Morocco; he also notes that the Moroccan frigate that has been being built is ready for launch and has been authorized to attack Americans (27 July 1802)
 - BW2:220: [James Simpson]() writes to the emperor of Morocco pleading patience, as the channels of communication between the United States and the Mediterranean are terribly slow (31 July 1802)
+- BW2:221: [James Simpson]() writes that the ship built to detain Americans is staying in port due to the presence of the [USS *Adams*]() and the [USS *Enterprise*](), and that Hajj Abdashaman Hashash (a Moroccan minister?) has promised to recommend discontinuation of hostilities toward America; Simpson did agree to let a Moroccan ship go to Tunis with wheat (3 August 1802)
