--- a/Convoy.page
+++ b/Convoy.page
@@ -47,6 +47,9 @@ what is worse, Slavery", 15 July 1802
 - BW2:183-84: [Richard Valentine Morris]() recommends ships wait for convoy at Cadiz if planning to go through the Straits of Gibraltar, seeing as the relations with Morocco have deteriorated significantly, 25 June 1802
 - BW2:218: [Alexander Murray]() thinks that convoy is necessary because the blockade isn't working (30 July 1802)
 
+## Requests for convoy
+- BW2:223: [Richard Valentine Morris]() writes to [Joseph Yznardy]() that 9 merchants in Cadiz have requested convoy westward (presumably through the Straits); he tells Yznardy that until [James Simpson]() has concluded his negotiations with Morocco, he can't instruct any ship to leave for convoy duty. If the negotiations are successful, Morris seems to be suggesting that no convoy will be necessary; if not, he will send the [USS *Adams*]() to collect vessels at Cadiz and Malaga, 3 August 1802
+
 ## Records of convoy
 - BW2:65: [William Bainbridge]() records taking 11 vessels through the Straits of Gibraltar, 23 February 1802
 - BW2:78: [USS George Washington]() took vessels from Leghorn to Marseilles, February 1802
